# sideral

./: .gitignore  README.md  Sideral.py  app.py  main.py  pyproject.toml  requirements.txt  tree.txt
.streamlit/: config.toml
data/: gallery_metadata.json
developing/data/: .~lock.labels.csv#  gz2_labels_clean.csv
developing/data/models/: model_metadata.json
developing/notebooks/: Datos_EDA.ipynb  EfficientNetSideral.ipynb  Hugging_Face.ipynb  generar_galería.py
pages/: 01_Galería.py  01_galeria.py  02_Clasificador.py  02_clasificador.py
utils/: llm.py  model_loader.py  prompt_engineering.py  secrets.py
